cicd/argo-rollouts/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${ARGO_ROLLOUTS_NAMESPACE:-argo-rollouts}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
